syntax = "proto3";
package identities.transactions.nub;

import "ids/base/identity_id.proto";
import "ids/base/string_id.proto";

message Message {
  string from = 1;
  assetmantle.schema.ids.base.StringID nub_i_d = 2;
}